2023-10-20T08:12:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6585128493 # 2001
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-20
* notice: last 14d: unq all: 82 190
* notice: prev accum: outdated-unq outdated-all / unq all: 1742 5431 / 1853 5619
* notice: next accum: outdated-unq outdated-all / unq all: 1742 5431 / 1855 5621
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-10-20]

2023-10-20T00:43:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6581895124 # 2000
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-20
* notice: last 14d: unq all: 81 188
* notice: prev accum: outdated-unq outdated-all / unq all: 1742 5431 / 1853 5618
* notice: next accum: outdated-unq outdated-all / unq all: 1742 5431 / 1853 5619
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-19]

2023-10-19T08:12:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6571726428 # 1998
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-19
* notice: last 14d: unq all: 81 187
* notice: prev accum: outdated-unq outdated-all / unq all: 1741 5430 / 1852 5617
* notice: next accum: outdated-unq outdated-all / unq all: 1742 5431 / 1853 5618
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-10-05] / [2023-10-19]

2023-10-19T00:43:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6568290510 # 1997