@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2023-10-20T08:12:34Z",
-  "count_outdated" : 5431,
-  "uniques_outdated" : 1742,
-  "count" : 5621,
+  "timestamp" : "2023-10-21T00:41:49Z",
+  "count_outdated" : 5444,
+  "uniques_outdated" : 1752,
+  "count" : 5622,
   "uniques" : 1855,
   "clones" : [
     {
-      "timestamp": "2023-10-06T00:00:00Z",
-      "count": 13,
-      "count_minmax": [ 11, 13 ],
-      "count_decinc": [ 0, 13 ],
-      "uniques": 10,
-      "uniques_minmax": [ 8, 10 ],
-      "uniques_decinc": [ 0, 10 ]
-    },
-    {
       "timestamp": "2023-10-07T00:00:00Z",
-      "count": 48,
-      "count_minmax": [ 48, 48 ],
-      "count_decinc": [ 0, 48 ],
-      "uniques": 14,
-      "uniques_minmax": [ 14, 14 ],
-      "uniques_decinc": [ 0, 14 ]
+      "count": 43,
+      "count_minmax": [ 43, 48 ],
+      "count_decinc": [ 5, 48 ],
+      "uniques": 12,
+      "uniques_minmax": [ 12, 14 ],
+      "uniques_decinc": [ 2, 14 ]
     },
     {
       "timestamp": "2023-10-08T00:00:00Z",
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-10-20T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
