@@ -1,16 +1,11 @@
 {
-  "count": 190,
-  "uniques": 82,
+  "count": 173,
+  "uniques": 76,
   "clones": [
     {
-      "timestamp": "2023-10-06T00:00:00Z",
-      "count": 13,
-      "uniques": 10
-    },
-    {
       "timestamp": "2023-10-07T00:00:00Z",
-      "count": 48,
-      "uniques": 14
+      "count": 43,
+      "uniques": 12
     },
     {
       "timestamp": "2023-10-08T00:00:00Z",
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-10-20T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
