@@ -1,3 +1,12 @@
+2023-10-21T00:41:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6594106859 # 2003
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-21
+* notice: last 14d: unq all: 76 173
+* notice: prev accum: outdated-unq outdated-all / unq all: 1742 5431 / 1855 5621
+* notice: next accum: outdated-unq outdated-all / unq all: 1752 5444 / 1855 5622
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -2 -5 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [2023-10-06] / [2023-10-07 2023-10-20]
+
 2023-10-20T08:12:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6585128493 # 2001
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-20
